# TN-Jax

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  PLAN_REVISED.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/tenax-autompo/: SKILL.md
.claude/skills/tenax-benchmark/: SKILL.md
.claude/skills/tenax-blueprint/: SKILL.md
.claude/skills/tenax-debugger/: SKILL.md
.claude/skills/tenax-dmrg-workflow/: SKILL.md
.claude/skills/tenax-ed-comparator/: SKILL.md
.claude/skills/tenax-getting-started/: SKILL.md
.claude/skills/tenax-homework/: SKILL.md
.claude/skills/tenax-ipeps-workflow/: SKILL.md
.claude/skills/tenax-migration-cytnx/: SKILL.md
.claude/skills/tenax-migration-itensor/: SKILL.md
.claude/skills/tenax-migration-quimb/: SKILL.md
.claude/skills/tenax-migration-tenpy/: SKILL.md
.claude/skills/tenax-observables/: SKILL.md
.claude/skills/tenax-symmetry/: SKILL.md
.claude/skills/tenax-tensor-ops/: SKILL.md
.claude/skills/tenax-trg-workflow/: SKILL.md
.claude/skills/tn-jax-autompo/: SKILL.md
.claude/skills/tn-jax-benchmark/: SKILL.md
.claude/skills/tn-jax-blueprint/: SKILL.md
.claude/skills/tn-jax-debugger/: SKILL.md
.claude/skills/tn-jax-dmrg-workflow/: SKILL.md
.claude/skills/tn-jax-ed-comparator/: SKILL.md
.claude/skills/tn-jax-homework/: SKILL.md
.claude/skills/tn-jax-ipeps-workflow/: SKILL.md
.claude/skills/tn-jax-symmetry/: SKILL.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __main__.py  backend.py  bench_dmrg.py  bench_hotrg.py  bench_idmrg.py  bench_ipeps.py  bench_ipeps_ad.py  bench_svd.py  bench_trg.py  results.py  run.py  runner.py
design/: cytnx_vs_tenax.md  cytnx_vs_tnjax.md  optimization-pr-stack.md  tn_gui_design.md
docs/: Makefile  conf.py  contraction_semantics.md  index.md
docs/api/: algorithms.rst  contraction.rst  core.rst  index.md  network.rst
docs/guide/: benchmarks.md  contraction.md  core_concepts.md  gotchas.md  installation.md  quickstart.md  tensor_networks.md
examples/: heisenberg_cylinder.py  heisenberg_infinite_cylinder.py  heisenberg_ipeps_ad.py  heisenberg_ipeps_excitations.py  heisenberg_ipeps_su.py  ising_hotrg.py  ising_trg.py
src/tenax/: __init__.py
src/tnjax/: __init__.py
tests/: conftest.py  test_ad_utils.py  test_auto_mpo.py  test_contraction.py  test_dmrg.py  test_fermionic.py  test_hotrg.py  test_idmrg.py  test_index.py  test_ipeps.py  test_ipeps_excitations.py  test_netfile.py  test_network.py  test_symmetry.py  test_tensor.py  test_trg.py
(+44 files in other folders)
