[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tnjax"
version = "0.1.0"
description = "JAX-based tensor network library with symmetry-aware block-sparse tensors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TN-Jax Contributors" }]
keywords = ["tensor network", "JAX", "DMRG", "TRG", "iPEPS", "quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4.30",
    "opt-einsum>=3.3.0",
    "numpy>=1.26",
    "networkx>=3.0",
    "optax>=0.2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.4.30; sys_platform == 'linux'"]
cuda13 = ["jax[cuda13]>=0.4.30; sys_platform == 'linux'"]
cuda12-local = ["jax[cuda12-local]>=0.4.30; sys_platform == 'linux'"]
cuda13-local = ["jax[cuda13-local]>=0.4.30; sys_platform == 'linux'"]
tpu = ["jax[tpu]>=0.4.30; sys_platform == 'linux'"]
metal = ["jax-metal>=0.1.1; sys_platform == 'darwin'"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "twine>=5.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "furo>=2024.0",
    "myst-parser>=3.0",
    "sphinx-design>=0.6",
]

[project.urls]
Homepage = "https://github.com/yingjerkao/TN-Jax"
Repository = "https://github.com/yingjerkao/TN-Jax"
Issues = "https://github.com/yingjerkao/TN-Jax/issues"

[dependency-groups]
dev = ["tnjax[dev]"]

[tool.hatch.build.targets.wheel]
packages = ["src/tnjax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tnjax --cov-report=term-missing --cov-report=xml"
markers = [
    "core: fast API and infrastructure tests",
    "algorithm: full algorithm runs (DMRG, TRG, HOTRG, iPEPS)",
    "slow: expensive tests (excitations, large convergence)",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/tnjax/__init__.py" = ["E402"]
"tests/**" = ["F401", "E402"]
"examples/**" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
